# skills

./: .gitignore  AGENTS.md  CLAUDE.md  CLI_AI_TOOLING_GAPS.md  HANDOFF.md  LICENSE  META_SKILL_DECOMPOSITION_PLAN.md  README.md  SKILL_EVALUATION_FRAMEWORK.md  TODO.md
.claude-plugin/: marketplace.json  plugin.json
evals/: README.md  pyproject.toml
evals/fixtures/: paginated-api.yaml  petstore-minimal.yaml  petstore-poor-naming.yaml
evals/fixtures/openrouter-go-sdk-issue-1/: README.md  issue.md
evals/skill_eval/: __init__.py  __main__.py  assertions.py  assessor.py  cli.py  evaluator.py  fixtures.py  observer.py  reporter.py  runner.py  tracker.py  workspace.py
evals/tests/: activation.yaml  completeness.yaml  correctness.yaml  diagnosis.yaml  generation.yaml  hallucination.yaml  overlay.yaml  workflow.yaml
skills/apply-openapi-overlay/: SKILL.md
skills/check-workspace-status/: SKILL.md
skills/configure-authentication/: SKILL.md
skills/configure-sdk-options/: SKILL.md
skills/configure-speakeasy-extensions/: SKILL.md
skills/create-openapi-overlay/: SKILL.md
skills/customize-sdk-hooks/: SKILL.md
skills/customize-sdk-runtime/: SKILL.md
skills/diagnose-generation-failure/: SKILL.md
skills/extract-openapi-django/: SKILL.md
skills/extract-openapi-fastapi/: SKILL.md
skills/extract-openapi-flask/: SKILL.md
skills/extract-openapi-from-code/: SKILL.md
skills/extract-openapi-hono/: SKILL.md
skills/extract-openapi-laravel/: SKILL.md
skills/extract-openapi-nestjs/: SKILL.md
skills/generate-mcp-server/: SKILL.md
templates/: SKILL.template.md
(+95 files in other folders)
