[project]
name = "skill-eval"
version = "0.1.0"
description = "Evaluation harness for Speakeasy agent skills"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "click>=8.0",
]

[project.scripts]
skill-eval = "skill_eval.__main__:cli"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
