[project]
name = "skill-eval"
version = "0.1.0"
description = "Evaluation harness for Speakeasy agent skills"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "click>=8.0",
]

[project.scripts]
skill-eval = "skill_eval.__main__:cli"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
